feat(jobs): status_prune task, atomic backup sidecar, status indexes, audit-write signal
Four low-effort backlog rows, closed. Unit-verified only, per the 2026-09-17 rule.

STATUS-CSV-RETENTION-1 - new status_prune maintenance task. Every run writes
FOUR run-timestamped siblings (the row said three; it omitted _unpack_) and
nothing pruned them. The detail the row missed is load-bearing: <pipeline>_
commits.log sits in the SAME directory and is NOT run-timestamped - it is the
durable "did this batch finish" ledger - as does per-batch manifests/. So the
filter is POSITIVE on the four _<family>_*.csv names and the walk is one level
deep; a glob-by-age would have eaten the ledger. Mutation-tested: widening the
filter to `.+` fails the commit-log guard. Deliberately not a `cleanup` job -
cleanup takes one dir, so it needs one job per Pipeline and silently misses
every Pipeline added later. retention_days required with no default, matching
every other prune. The row's "28 files today" is unverifiable in a clean
checkout; spaces/*/data/ is gitignored runtime data.

BACKUP-MANIFEST-ATOMIC-1 - the backup zip was staged and ATOMIC_MOVEd while its
sidecar manifest was a bare Files.writeString. That asymmetry matters because
verify() and restore() are fail-closed ON the sidecar: it carries per-file
SHA-256 plus the archive hash so verification never trusts the archive it is
verifying, which means a TORN manifest fails a GOOD archive - worse than a
missing one. Now absent-or-complete. Pinned by a source-scan test, since no
successful run can distinguish the two implementations; mutation-tested. The
first draft of that assertion was itself broken - contains("Files.write(sidecar")
matches inside AtomicFiles.write(sidecar - and only running it caught that.

DB-STATUS-INDEX-1 - DbStatusStore created six tables and zero indexes while its
own javadoc claimed "plus the few columns we actually index on". Indexed from
the closed predicate set rather than by guessing: committedBatches and